--- a/curve-rush.html
+++ b/curve-rush.html
@@ -68,14 +68,14 @@
     const loadingBar = document.getElementById("unity-loading-bar");
     const progressBarFull = document.getElementById("unity-progress-bar-full");
 
-    const buildUrl = "./slope3.com/gamep/curve-rush/Build";
+    const buildUrl = "./Build";
     const loaderUrl = buildUrl + "/curve-rush.loader.js";
 
     const config = {
       dataUrl: buildUrl + "/curve-rush.data",
       frameworkUrl: buildUrl + "/curve-rush.framework.js",
       codeUrl: buildUrl + "/curve-rush.wasm",
-      streamingAssetsUrl: "./slope3.com/gamep/curve-rush/StreamingAssets",
+      streamingAssetsUrl: "./StreamingAssets",
       companyName: "Greenlight",
       productName: "Curve Rush",
       productVersion: "1.0"
