--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
     const loadingBar = document.getElementById("unity-loading-bar");
     const progressBarFull = document.getElementById("unity-progress-bar-full");
 
-    const buildUrl = "https://slope3.com/gamep/curve-rush/Build";
-    const dihhhhh = "./Build";
+    const buildUrl = "./Build";
     const loaderUrl = buildUrl + "/curve-rush.loader.js";
 
     const config = {
-      dataUrl: dihhhhh + "/curve-rush.data",
-      frameworkUrl: dihhhhh + "/curve-rush.framework.js",
-      codeUrl: dihhhhh + "/curve-rush.wasm",
+      dataUrl: buildUrl + "/curve-rush.data",
+      frameworkUrl: buildUrl + "/curve-rush.framework.js",
+      codeUrl: buildUrl + "/curve-rush.wasm",
       streamingAssetsUrl: "./StreamingAssets",
       companyName: "Greenlight",
       productName: "Curve Rush",
