--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
   </div>
 
   <script>
-    const container = document.getElementById("unity-container");
     const canvas = document.getElementById("unity-canvas");
     const loadingBar = document.getElementById("unity-loading-bar");
     const progressBarFull = document.getElementById("unity-progress-bar-full");
 
-    const buildUrl = "./Build";
-    const loaderUrl = buildUrl + "/curve-rush.loader.js";
+    // Use your GitHub Pages URL
+    const buildUrl = "https://4texas4.github.io/curve-rush/Build/";
+
+    const loaderUrl = buildUrl + "curve-rush.loader.js";
 
     const config = {
-      dataUrl: buildUrl + "/curve-rush.data",
-      frameworkUrl: buildUrl + "/curve-rush.framework.js",
-      codeUrl: buildUrl + "/curve-rush.wasm",
-      streamingAssetsUrl: "./StreamingAssets",
+      dataUrl: buildUrl + "curve-rush.data",
+      frameworkUrl: buildUrl + "curve-rush.framework.js",
+      codeUrl: buildUrl + "curve-rush.wasm",
       companyName: "Greenlight",
       productName: "Curve Rush",
       productVersion: "1.0"
