--- a/index.html
+++ b/index.html
@@ -1,102 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Curve Rush</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
-
-    #unity-container {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
-
-    #unity-canvas {
-      width: 100%;
-      height: 100%;
-      background: #000;
-    }
-
-    #unity-loading-bar {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 300px;
-      display: block;
-    }
-
-    #unity-progress-bar-empty {
-      width: 100%;
-      height: 18px;
-      background: #333;
-    }
-
-    #unity-progress-bar-full {
-      width: 0%;
-      height: 100%;
-      background: #4caf50;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="unity-container">
-    <canvas id="unity-canvas" tabindex="-1"></canvas>
-
-    <div id="unity-loading-bar">
-      <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    const canvas = document.getElementById("unity-canvas");
-    const loadingBar = document.getElementById("unity-loading-bar");
-    const progressBarFull = document.getElementById("unity-progress-bar-full");
-
-    // Use your GitHub Pages URL
-    const buildUrl = "https://4texas4.github.io/curve-rush/Build/";
-
-    const loaderUrl = buildUrl + "curve-rush.loader.js";
-
-    const config = {
-      dataUrl: buildUrl + "curve-rush.data",
-      frameworkUrl: buildUrl + "curve-rush.framework.js",
-      codeUrl: buildUrl + "curve-rush.wasm",
-      companyName: "Greenlight",
-      productName: "Curve Rush",
-      productVersion: "1.0"
-    };
-
-    loadingBar.style.display = "block";
-
-    const script = document.createElement("script");
-    script.src = loaderUrl;
-
-    script.onload = () => {
-      createUnityInstance(canvas, config, (progress) => {
-        progressBarFull.style.width = (progress * 100) + "%";
-      }).then(() => {
-        loadingBar.style.display = "none";
-      }).catch((err) => {
-        alert(err);
-      });
-    };
-
-    document.body.appendChild(script);
-  </script>
-</body>
-</html>
+<html><head><style>html,body{margin:0;height:100%;background:#000;overflow:hidden}canvas{width:100%;height:100%;display:block}</style></head><body><canvas id="u"></canvas><script>let u=document.getElementById("u"),c={dataUrl:"https://4texas4.github.io/curve-rush/Build/curve-rush.data",frameworkUrl:"https://4texas4.github.io/curve-rush/Build/curve-rush.framework.js",codeUrl:"https://4texas4.github.io/curve-rush/Build/curve-rush.wasm"};let s=document.createElement("script");s.src="https://4texas4.github.io/curve-rush/Build/curve-rush.loader.js";s.onload=()=>createUnityInstance(u,c).catch(alert);document.body.appendChild(s);</script></body></html>
